force-app/main/default/objects/Article__c/fields/Article_Link__c.field-meta.xml
<CustomField>
    <fullName>Article_Link__c</fullName>
    <inlineHelpText>You may leave it blank</inlineHelpText>
    <label>Article Link</label>
    <type>Url</type>
</CustomField>