force-app/main/default/objects/Article__c/fields/Article_Preview__c.field-meta.xml
<CustomField>
    <fullName>Article_Preview__c</fullName>
    <inlineHelpText>Summary / tldr of the article,</inlineHelpText>
    <label>Article Preview</label>
    <type>TextArea</type>
</CustomField>