force-app/main/default/objects/Article__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Author</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Articles</relationshipLabel>
    <relationshipName>Articles</relationshipName>
    <type>Lookup</type>
</CustomField>