force-app/main/default/objects/Article__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Featured</fullName>
            </value>
            <value>
                <fullName>Trends</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>Self Storage</fullName>
            </value>
            <value>
                <fullName>Restaurants</fullName>
            </value>
            <value>
                <fullName>CoWorking</fullName>
                <label>Coworking</label>
            </value>
            <value>
                <fullName>Student Housing</fullName>
            </value>
            <value>
                <fullName>Villas</fullName>
            </value>
            <value>
                <fullName>Vacation Rental</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Hostel</fullName>
            </value>
            <value>
                <fullName>Tendencias</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>