force-app/main/default/objects/Article__c/fields/Cover_Photo__c.field-meta.xml
<CustomField>
    <fullName>Cover_Photo__c</fullName>
    <label>Cover Photo (URL)</label>
    <type>Url</type>
</CustomField>