force-app/main/default/objects/Article__c/fields/HTML_Content__c.field-meta.xml
<CustomField>
    <fullName>HTML_Content__c</fullName>
    <label>HTML Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>