force-app/main/default/objects/Article__c/fields/Is_Main_Article__c.field-meta.xml
<CustomField>
    <fullName>Is_Main_Article__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Main Article?</label>
    <type>Checkbox</type>
</CustomField>