force-app/main/default/objects/Article__c/fields/Meta_Description__c.field-meta.xml
<CustomField>
    <fullName>Meta_Description__c</fullName>
    <label>Meta Description</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>