force-app/main/default/objects/Article__c/fields/Meta_Title__c.field-meta.xml
<CustomField>
    <fullName>Meta_Title__c</fullName>
    <label>Meta Title</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>