force-app/main/default/objects/Article__c/fields/Publish__c.field-meta.xml
<CustomField>
    <fullName>Publish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publish?</label>
    <type>Checkbox</type>
</CustomField>