force-app/main/default/objects/Article__c/fields/Scheduled_Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Publish_Date__c</fullName>
    <label>Scheduled Publish Date</label>
    <type>Date</type>
</CustomField>