force-app/main/default/objects/Article__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags (separated by comma)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>