force-app/main/default/objects/Article__c/fields/Total_Views__c.field-meta.xml
<CustomField>
    <fullName>Total_Views__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total_Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>