force-app/main/default/objects/Article__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Is_Main_Article__c</columns>
    <columns>Publish__c</columns>
    <columns>Scheduled_Publish_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Views__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Author__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>