force-app/main/default/objects/Article__c/listViews/Article_Views.listView-meta.xml
<ListView>
    <fullName>Article_Views</fullName>
    <columns>NAME</columns>
    <columns>Publish__c</columns>
    <columns>Is_Main_Article__c</columns>
    <columns>Category__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Scheduled_Publish_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Article Views</label>
</ListView>